Feature/optional phantom type (#41)
optional now uses a phantom type instead of wildcard to improve type safety